# FDTAF

./: README.md  blockdev.c  configure  hmp-commands.hx  meson.build
accel/shared/: decaf-basic-callback.c  decaf-callback.c  decaf-hashtable-wrapper.cpp  decaf-linux-procinfo.cpp  decaf-linux-vmi.cpp  decaf-main.c  decaf-output.c  decaf-taint-memory.c  decaf-taint-tcg.c  decaf-taint-tcg.c.bak  decaf-taintcheck-opt.c  decaf-target.c  decaf-vmi-basic.c  decaf-vmi-common.cpp  decaf-vmi-msg-wrapper.cpp  fdtaf-basic-callback.c  fdtaf-callback.c  fdtaf-hashtable-wrapper.cpp  fdtaf-linux-procinfo.cpp  fdtaf-linux-vmi.cpp  fdtaf-main.c  fdtaf-output.c  fdtaf-taint-memory.c  fdtaf-taint-propagate-msg.c  fdtaf-taint-tcg.c  fdtaf-taint-tcg.c.bak  fdtaf-taintcheck-opt.c  fdtaf-target.c  fdtaf-tcg-taint-track.c  fdtaf-tcpip-parser.c  fdtaf-vmi-common.cpp  fdtaf-vmi-msg-wrapper.cpp  hashtable-warpper.cpp  meson.build  output.c
accel/tcg/: cpu-exec.c  cputlb.c  translator.c
builddir/meson-info/: meson-info.json
builddir/meson-logs/: meson-log.txt
hw/net/: e1000.c
include/exec/: helper-head.h
include/shared/: decaf-basic-callback.h  decaf-callback-common.h  decaf-callback-to-qemu.h  decaf-cmd.h  decaf-function-map.h  decaf-hashtable-wrapper.h  decaf-hookapi.h  decaf-linux-procinfo.h  decaf-linux-vmi.h  decaf-main-internal.h  decaf-main.h  decaf-output.h  decaf-taint-memory.h  decaf-taint-tcg.h  decaf-taint-tcg.h.bak  decaf-taintcheck-opt.h  decaf-target.h  decaf-types-common.h  decaf-vm-compress.h  decaf-vmi-callback.h  (+23 more)
monitor/: misc.c
softmmu/: vl.c
tcg/: tcg.c
(+50 files in other folders)
